--- a/mvvm_hilt_room_retro_test/src/main/res/navigation/my_nav.xml
+++ b/mvvm_hilt_room_retro_test/src/main/res/navigation/my_nav.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_nav"
@@ -9,22 +10,42 @@
         android:id="@+id/insertMovieFragment"
         android:name="com.alidoran.mvvm_hilt_room_retro_test.view.InsertMovieFragment"
         android:label="fragment_insert_movie"
-        tools:layout="@layout/fragment_insert_movie" />
+        tools:layout="@layout/fragment_insert_movie" >
+        <argument
+            android:name="movie_list_size"
+            app:argType="integer"
+            android:defaultValue="0" />
+        <action
+            android:id="@+id/action_insertMovieFragment_to_imagePickerFragment"
+            app:destination="@id/imagePickerFragment" />
+    </fragment>
+
     <fragment
         android:id="@+id/show250TopMovieFragment"
         android:name="com.alidoran.mvvm_hilt_room_retro_test.view.Show250TopMovieFragment"
         android:label="fragment_show250_top_movie"
-        tools:layout="@layout/fragment_show250_top_movie" />
+        tools:layout="@layout/fragment_show250_top_movie" >
+        <action
+            android:id="@+id/action_show250TopMovieFragment_to_insertMovieFragment"
+            app:destination="@id/insertMovieFragment" >
+            <argument
+                android:name="movie_list_size"
+                app:argType="integer"
+                android:defaultValue="0"/>
+        </action>
+    </fragment>
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.alidoran.mvvm_hilt_room_retro_test.view.MainFragment"
         android:label="fragment_main"
         tools:layout="@layout/fragment_main" >
         <action
-            android:id="@+id/action_mainFragment_to_insertMovieFragment"
-            app:destination="@id/insertMovieFragment" />
-        <action
             android:id="@+id/action_mainFragment_to_show250TopMovieFragment"
             app:destination="@id/show250TopMovieFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/imagePickerFragment"
+        android:name="com.alidoran.mvvm_hilt_room_retro_test.view.ImagePickerFragment"
+        android:label="fragment_image_picker"
+        tools:layout="@layout/fragment_image_picker" />
 </navigation>
