--- a/mvvm_hilt_room_retro_test/src/main/res/layout/fragment_insert_movie.xml
+++ b/mvvm_hilt_room_retro_test/src/main/res/layout/fragment_insert_movie.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name = "model"
@@ -19,6 +20,20 @@
             android:orientation="vertical"
             android:padding="8dp">
 
+            <ImageView
+                android:id="@+id/MoviePicture"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:src="@drawable/baseline_add_black_24dp"
+                android:contentDescription="@string/movie_picture"
+                bind:picasso="@{model.image}"/>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/txt_movie_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/movie_cout"/>
+
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edt_title"
@@ -32,7 +47,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/rank"
-                android:text="@={model.rank}"/>
+                android:text="@={model.rank}"
+                />
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edt_full_title"
