--- a/mvvm_hilt_room_retro_test/src/main/res/layout/fragment_show250_top_movie.xml
+++ b/mvvm_hilt_room_retro_test/src/main/res/layout/fragment_show250_top_movie.xml
@@ -21,5 +21,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@+id/swipe_movie_list"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/baseline_add_black_24dp"
+            android:tint="@color/white"
+            android:contentDescription="@string/add_movie"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
