--- a/mvvm_hilt_room_retro_test/src/main/res/values-night/themes.xml
+++ b/mvvm_hilt_room_retro_test/src/main/res/values-night/themes.xml
@@ -1,4 +1,4 @@
 <resources >
-    <style name="Theme.Applications" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.Applications" parent="Theme.MaterialComponents.DayNight.NoActionBar">
     </style>
 </resources>
