--- a/mvvm_hilt_room_retro_test/src/main/res/layout/movie_item.xml
+++ b/mvvm_hilt_room_retro_test/src/main/res/layout/movie_item.xml
@@ -7,46 +7,49 @@
             name="model"
             type="com.alidoran.mvvm_hilt_room_retro_test.model.Movie"/>
     </data>
+
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="8dp"
+    android:background="@color/md_blue_grey_600"
     >
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/txt_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/movie_item_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="@{model.title}"/>
 
-    <TextView
-        android:id="@+id/txt_full_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txt_title"
-        android:text="@{model.fullTitle}"/>
+        android:text="@{model.title}"
+        />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/img_movie_logo"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:contentDescription="@string/movie_image"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txt_title"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="@dimen/low_margin"
         bind:picasso="@{model.image}" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/txt_full_title"
+        style="@style/movie_item_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/img_movie_logo"
+
+        android:text="@{model.fullTitle}"/>
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/material_on_primary_emphasis_medium"
-        android:text="@string/delete"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/img_movie_logo"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@id/txt_full_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:icon="@drawable/remove_24dp"
+        android:backgroundTint="@color/md_red_700"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
