--- a/mvvm_hilt_room_retro_test/src/main/res/values/themes.xml
+++ b/mvvm_hilt_room_retro_test/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources >
-    <style name="Theme.Applications" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.Applications" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
     </style>
 </resources>
