--- a/secure_data/src/main/res/layout/fragment_sign_up.xml
+++ b/secure_data/src/main/res/layout/fragment_sign_up.xml
@@ -42,7 +42,9 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        android:maxLines="1"
+                        android:inputType="text"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -54,7 +56,9 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        android:maxLines="1"
+                        android:inputType="text"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
 
