--- a/mvvm_hilt_room_retro_test/src/main/res/layout/movie_item.xml
+++ b/mvvm_hilt_room_retro_test/src/main/res/layout/movie_item.xml
@@ -48,7 +48,7 @@
         android:layout_height="50dp"
         app:layout_constraintTop_toBottomOf="@id/txt_full_title"
         app:layout_constraintStart_toStartOf="parent"
-        app:icon="@drawable/remove_24dp"
+        app:icon="@drawable/baseline_remove_black_24dp"
         android:backgroundTint="@color/md_red_700"
         />
 
